--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,59 @@
 
   <name>Guru99eCommerceTest</name>
   <url>http://maven.apache.org</url>
+  
+  <build>
+  <plugins>
+  
+  <plugin>
+  
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+  <source>1.6</source>
+  <target>1.6</target>
+  
+  </configuration>
+  
+  </plugin>
+  
+  
+  <plugin>
+    <groupId> org.apache.maven.plugins</groupId>
+  <artifactId>maven-source-plugin</artifactId>
+   <executions>
+  <execution>
+  <id> attach-sources </id>
+  <goals>
+  <goal> jar  </goal>
+  </goals>
+  
+  </execution>
+  </executions>
+  </plugin>
+  
+  
+  <plugin>
+  <groupId> org.apache.maven.plugins </groupId>
+  <artifactId> maven-surefire-plugin</artifactId>
+  <version>2.19.1</version>
+  <configuration>
+  <suiteXmlFiles>
+  <suiteXmlfile>src/main/resources/testng.xml</suiteXmlfile>
+  </suiteXmlFiles>
+  </configuration>
+  </plugin>
+  
+  </plugins>
+  
+  <resources>
+  <resource>
+  <directory> src/main/resources</directory>
+  <filtering>true</filtering>
+  </resource>
+  </resources>
+  
+  </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
